ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path
spec:
  rules:
  - host: path.example.com
    http:
      paths:
      - path: /red
        pathType: Prefix
        backend:
          service:
            name: hello-world-service-red
            port:
              number: 4242
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: hello-world-service-blue
            port:
              number: 4343
